# shadesmar

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
bridge/: Cargo.toml
bridge/src/: config.rs  ctrl.rs  error.rs  fabrial.rs  lib.rs  net.rs  plugins.rs
bridge/src/config/: dhcp.rs
bridge/src/net/: dhcp.rs  error.rs  pcap.rs  router.rs  switch.rs  wan.rs
bridge/src/net/router/: builder.rs  handle.rs  handler.rs  table.rs
bridge/src/net/router/handler/: icmp.rs  udp.rs
bridge/src/net/wan/: blackhole.rs  pcap.rs  tap.rs  udp.rs  wireguard.rs
core/: Cargo.toml
core/src/: csum.rs  frame.rs  ipv4.rs  lib.rs  macros.rs  nat.rs  plugins.rs  queue.rs  switch.rs  types.rs
core/src/plugins/: macros.rs  vtable.rs
core/src/protocols/: icmp.rs
core/src/types/: buffers.rs  mac.rs  netaddress.rs
examples/: orion.tgz
net/: Cargo.toml
net/src/: frame.rs  lib.rs  protocols.rs
net/src/protocols/: arp.rs  tcp.rs  udp.rs
net/src/types/: mac.rs  netaddress.rs
src/: app.rs  main.rs  os.rs
src/app/: pcap.rs
vhost/: Cargo.toml
vhost/src/: device.rs  error.rs  lib.rs  queue.rs  types.rs  vhost.rs
wans/blackhole/: Cargo.toml
wans/blackhole/src/: lib.rs
wans/common/: Cargo.toml
wans/common/src/: error.rs  lib.rs
wans/tap/: Cargo.toml  README.md
wans/tap/src/: lib.rs  tap.rs
wans/wireguard/: Cargo.toml
wans/wireguard/src/: lib.rs  wireguard.rs
