[package]
name = "shadesmar-bridge"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
boringtun = "0.6.0"
dhcproto = "0.11.0"
flume = { workspace = true }
mio = { workspace = true }
nix = { workspace = true }
shadesmar-net = { path = "../net" }
shadesmar-vhost = { path = "../vhost" }
parking_lot = { workspace = true }
pcap-file = "2.0.0"
serde = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
