[package]
name = "shadesmar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
flume = { workspace = true }
libloading = "0.8.5"
mio = { workspace = true }
once_cell = "1.19.0"
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
