[package]
name = "shadesmar-vhost"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
mio = { workspace = true }
nix = { workspace = true }
shadesmar-core = { path = "../core" }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
virtio-queue = "0.12.0"
vm-memory = { version = "0.14.1", features = ["backend-mmap", "backend-atomic"] }
