[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mio = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
shadesmar-net = { path = "../../net" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wan-core = { path = "../common" }