[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
flume = { workspace = true }
serde = { workspace = true }
shadesmar-core = { path = "../../core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
