[package]
name = "wireguard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
boringtun = "0.6.0"
flume = { workspace = true }
mio = { workspace = true }
nix = { workspace = true }
parking_lot = { workspace = true }
shadesmar-core = { path = "../../core" }
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9.34"
tracing = { workspace = true }
uuid = { workspace = true }